Fixed overflow-x

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
+html, body { overflow-x: hidden; }
+
 body {
   width: 100vw;
   margin: 0px;
-
-  overflow-x: hidden;
 }
 
 img {
